--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'com.android.support:support-v4:28.0.0'
