--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.apache.commons:commons-csv:1.6'
+    implementation 'com.github.deep-dive-coding-java:android-utilities:1.0.3'
+    implementation 'com.github.deep-dive-coding-java:date-utilities:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
