--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        maven {
+            url 'https://jitpack.io'
+        }
     }
 }
 
