--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.apache.commons:commons-csv:1.6'
     implementation 'com.github.deep-dive-coding-java:android-utilities:1.0.3'
     implementation 'com.github.deep-dive-coding-java:date-utilities:1.0.0'
