--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,26 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // Don't worry baout lics stat for com.android but link javadoc needed
+    // androi.arch don't worry about license but do javadoc link
+
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.apache.commons:commons-csv:1.6'
     implementation 'com.github.deep-dive-coding-java:android-utilities:1.0.3'
     implementation 'com.github.deep-dive-coding-java:date-utilities:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
+
     implementation 'android.arch.persistence.room:runtime:1.1.1'
-    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
