--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
     android:roundIcon="@mipmap/transform_icon_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".controller.MainActivity"/>
+    <activity android:name=".controller.MainActivity"
+      android:configChanges="orientation|screenSize"
+      />
     <activity
       android:label="@string/app_name"
       android:name=".controller.LoginActivity">
